--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -22,4 +22,14 @@
         <item name="endIconMode">custom</item>
         <item name="endIconDrawable">@drawable/ic_wikipedia</item>
     </style>
+    
+    <style name="CustomOutlinedBox." parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+
+        <item name="counterEnabled">true</item>
+        <item name="counterMaxLength">5</item>
+        <item name="boxStrokeErrorColor">@color/colorAccent</item>
+        <item name="cornerRadius">20dp</item>
+        <item name="endIconMode">custom</item>
+        <item name="endIconDrawable">@drawable/ic_wikipedia</item>
+    </style>
 </resources>
