--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,8 @@
     <color name="white">#FFFFFFFF</color>
     <color name="orange">#FFF56642</color>
     <color name="green">#FF009842</color>
+    <color name="light_blue">#FF00B0FF</color>
+
 
 
     <color name="color_gray">#66000000</color>
@@ -16,4 +18,5 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="MyColorOne">#187654</color>
 </resources>
