попытка изменить тему

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,12 @@
     android:layout_height="match_parent"
     android:id="@+id/main_container"
     tools:context=".view.MainActivity">
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/light_blue"
+        android:id="@+id/changeTheme"
+        android:text="CHANGE"/>
 
 
 </FrameLayout>
