--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
 
 
 
+    <color name="MyColorOne40Alfa">#66187654</color>
     <color name="color_gray">#66000000</color>
 
     <color name="colorPrimary">#008577</color>
