Correct 3 lesson and start 4

--- a/app/src/main/res/layout/fragment_pod.xml
+++ b/app/src/main/res/layout/fragment_pod.xml
@@ -37,11 +37,13 @@
                     android:inputType="text" />
             </com.google.android.material.textfield.TextInputLayout>
 
+
             <com.example.desighkotlin.utils.CustomImageView
                 android:id="@+id/custom_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:scaleType="centerInside"
                 android:contentDescription="@string/photo_of_the_day_stub"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
