--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,5 +5,7 @@
     <dimen name="endMarginRowContent">16dp</dimen>
     <dimen name="labelTextSize">16sp</dimen>
     <dimen name="bigTextSize">24sp</dimen>
+    <dimen name="default_margin">20dp</dimen>
+    <dimen name="large_margin">45dp</dimen>
 
 </resources>
