--- a/app/src/main/res/layout/fragment_pod_start.xml
+++ b/app/src/main/res/layout/fragment_pod_start.xml
@@ -8,41 +8,28 @@
     <androidx.core.widget.NestedScrollView
         android:id="@+id/scroll"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        >
 
-        <androidx.constraintlayout.motion.widget.MotionLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/main"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingStart="10dp"
-            android:paddingEnd="10dp"
-            app:layoutDescription="@xml/motion_scene">
+            android:paddingEnd="10dp">
 
-            <ImageView
-                android:id="@+id/btnWiki"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="14dp"
-                android:src="@drawable/ic_wikipedia"
-                android:visibility="visible"
-                app:layout_constraintBottom_toBottomOf="@+id/input_layout"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/input_layout" />
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/input_layout"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:hint="@string/search_wiki"
-                app:counterEnabled="true"
-                app:counterMaxLength="20"
                 app:endIconCheckable="true"
                 app:endIconDrawable="@drawable/ic_wikipedia"
                 app:endIconMode="custom"
                 app:helperText="@string/wiki_helper_text"
-                app:layout_constraintBottom_toTopOf="@+id/image_view"
-                app:layout_constraintStart_toEndOf="parent">
+                app:layout_constraintBottom_toTopOf="@+id/custom_view"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/input_edit_text"
@@ -51,18 +38,20 @@
                     android:inputType="text" />
             </com.google.android.material.textfield.TextInputLayout>
 
+
             <com.example.desighkotlin.utils.CustomImageView
                 android:id="@+id/custom_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:contentDescription="@string/photo_of_the_day_stub"
                 android:scaleType="centerInside"
-                android:visibility="invisible"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:visibility="visible"
+                android:contentDescription="@string/photo_of_the_day_stub"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+
                 app:srcCompat="@drawable/ic_no_photo_vector" />
 
 
@@ -80,8 +69,44 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/ic_no_photo_vector" />
 
-        </androidx.constraintlayout.motion.widget.MotionLayout>
+
+            <androidx.constraintlayout.widget.Guideline
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:visibility="visible"
+                app:layout_constraintGuide_percent = "0.8"
+                android:id="@+id/guideline"/>
+
+            <androidx.constraintlayout.widget.Guideline
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:visibility="visible"
+                app:layout_constraintGuide_percent = "0.8"
+                android:id="@+id/guidelineVerticalEnd"/>
+            <androidx.constraintlayout.widget.Guideline
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:visibility="visible"
+                app:layout_constraintGuide_percent = "0.2"
+                android:id="@+id/guidelineVerticalStart"/>
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/song"
+        android:textSize="@dimen/labelTextSize"
+        android:id="@+id/song"
+        android:layout_gravity="center"
+        android:textStyle="bold"
+        app:layout_behavior=".repository.MyAppBarBehavior"
+        />
 
     <include
         android:id="@+id/include_layout"
