--- a/app/src/main/res/layout/activity_animation.xml
+++ b/app/src/main/res/layout/activity_animation.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:id="@+id/transitionContainer"
     android:gravity="center"
-    tools:context=".view.animation.AnimationActivity">
+    tools:context=".view.animation.FirstAnimationActivity">
 
 
     <androidx.appcompat.widget.AppCompatButton
@@ -36,4 +36,4 @@
 
 
 
-</LinearLayout>
+</FrameLayout>
