--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -10,6 +10,10 @@
             android:id="@+id/secondScreenAnimation"
             android:icon="@drawable/ic_settings_menu"
             android:title="@string/second_screen" />
+        <item
+            android:id="@+id/recycle"
+            android:icon="@drawable/ic_list"
+            android:title="@string/list" />
     </group>
 
 </menu>
