--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,5 +7,7 @@
     <dimen name="bigTextSize">24sp</dimen>
     <dimen name="default_margin">20dp</dimen>
     <dimen name="large_margin">45dp</dimen>
+    <dimen name="small_margin">8dp</dimen>
+    <dimen name="item_margin">15dp</dimen>
 
 </resources>
